# panel-auth-credfile

./: .gitignore  LICENSE  README.md  pyproject.toml
src/panel_auth_credfile/: cli.py  config.py  credentials.py  credfile_login_handler.py
